--- a/app/src/main/res/layout/dialog_emergencia.xml
+++ b/app/src/main/res/layout/dialog_emergencia.xml
@@ -24,7 +24,7 @@
     <ImageButton
         android:layout_width="40dp"
         android:layout_height="40dp"
-        app:srcCompat="@drawable/ic_action_alert"
+        android:background="@drawable/ic_alert"
         android:id="@+id/image"
         android:layout_marginLeft="5dp"
         android:layout_marginTop="5dp"
@@ -54,18 +54,32 @@
         android:textSize="17sp"
         android:layout_below="@+id/text" />
 
+    <TextView
+        android:text="(Deslizar para activar)"
+        android:layout_width="235dp"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/text3"
+        android:gravity="center"
+        android:layout_marginTop="10dp"
+        android:padding="5dp"
+        android:textStyle="italic"
+        android:textSize="15sp"
+        android:layout_below="@+id/text2" />
+
     <com.ncorti.slidetoact.SlideToActView
         android:id="@+id/aceptarEmergencia"
         android:layout_width="230dp"
         android:layout_height="64dp"
         app:slider_height="65dp"
         android:layout_marginTop="10dp"
-        android:layout_below="@+id/text2"
+        android:layout_below="@+id/text3"
         android:layout_centerHorizontal="true"
         android:elevation="4dp"
+        android:padding="10dp"
         app:outer_color="@color/colorSOS"
         app:text_size="18sp"
-        app:text="Aceptar" />
+        app:text="Aceptar"/>
 
 
     <Button
