--- a/app/src/main/res/layout/activity_add_document.xml
+++ b/app/src/main/res/layout/activity_add_document.xml
@@ -4,50 +4,87 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
+    android:id="@+id/rl3"
     tools:context=".addDocument">
 
-    <RelativeLayout
-        android:id="@+id/rl2"
-        android:layout_width="match_parent"
-        android:background="#d0d1d5"
-        android:layout_height="280dp">
 
-        <Button
-            android:id="@+id/añadirFot"
-            android:background="@color/colorAccent"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="10dp"
-            android:layout_centerInParent="true"
-            android:backgroundTint="#ebebeb"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:text="  Añadir imagen  "/>
+
+    <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_marginTop="15dp"
+            android:orientation="horizontal"
+            android:weightSum="3"
+            android:layout_height="140dp"
+            android:id="@+id/ll1">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/ic_botoncamara"
+                android:layout_margin="5dp"
+                android:background="#eaeaea"
+                android:layout_weight="1"
+                android:id="@+id/iv1"/>
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/ic_botoncamara"
+                android:background="#eaeaea"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:id="@+id/iv2"/>
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/ic_botoncamara"
+                android:background="#eaeaea"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:id="@+id/iv3"/>
+
+
+        </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_marginTop="15dp"
+        android:orientation="horizontal"
+        android:weightSum="3"
+        android:layout_height="140dp">
 
         <ImageView
-            android:id="@+id/imgview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"/>
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="invisible"
+            android:layout_margin="5dp"
+            android:layout_weight="1"
+            android:id="@+id/iv11"/>
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="invisible"
+            android:layout_margin="5dp"
+            android:layout_weight="1"
+            android:id="@+id/iv21"/>
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="invisible"
+            android:layout_margin="5dp"
+            android:layout_weight="1"
+            android:id="@+id/iv31"/>
 
-    </RelativeLayout>
 
+    </LinearLayout>
 
-
-    
-    <EditText
-        android:inputType="textMultiLine"
-        android:lines="8"
-        android:minLines="6"
-        android:gravity="top|left"
-        android:maxLines="10"
-        android:background="#e1e6e8"
-        android:layout_marginTop="10dp"
+    <Button
+        android:id="@+id/botinfo"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        android:scrollbars="vertical"
-        android:layout_below="@id/rl2"
-    />
+        android:layout_below="@id/ll1"
+        android:layout_centerHorizontal="true"
+        android:text="Añadir documentación"/>
 
     <Button
         android:id="@+id/añadirDoc"
@@ -57,6 +94,16 @@
         android:layout_marginBottom="10dp"
         android:layout_alignParentBottom="true"
         android:layout_height="wrap_content"
-        android:text="Añadir documentación"/>
+        android:text="Confirmar"/>
+    <TextView
+        android:id="@+id/texto"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@id/añadirDoc"
+        android:layout_below="@id/ll1"
+        android:layout_marginBottom="10dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="5dp" />
 
 </RelativeLayout>
