--- a/app/src/main/res/layout/cardview.xml
+++ b/app/src/main/res/layout/cardview.xml
@@ -4,47 +4,42 @@
     android:padding="16dp"
     android:orientation="horizontal">
 
-    <android.support.v7.widget.CardView
+
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/cv"
-        >
+        android:layout_height="100dp"
+        android:background="#bebebe"
+        android:id="@+id/rl4"
+        android:padding="16dp">
 
-        <RelativeLayout
+        <ImageView
             android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/cv"/>
+
+        <ImageView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="#ebebeb"
-            android:padding="16dp"
-            >
+            android:id="@+id/foto"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginRight="16dp"/>
 
+        <TextView
+            android:id="@+id/person_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:textSize="30sp" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/person_name"
-                android:layout_alignParentTop="true"
-                android:textSize="30sp"
-                />
+        <TextView
+            android:id="@+id/person_age"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/person_name" />
+    </RelativeLayout>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/person_age"
-                android:layout_below="@+id/person_name"
-                />
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_alignParentRight="true"
-                android:id="@+id/link"
-                android:src="@drawable/ic_description_black_24dp" />
-
-
-        </RelativeLayout>
-
-    </android.support.v7.widget.CardView>
 
 
 </LinearLayout>
