--- a/app/src/main/res/layout/activity_add_document.xml
+++ b/app/src/main/res/layout/activity_add_document.xml
@@ -83,6 +83,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/ll1"
+        android:layout_marginTop="20dp"
         android:layout_centerHorizontal="true"
         android:text="Añadir documentación"/>
 
@@ -104,6 +105,6 @@
         android:layout_marginBottom="10dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:layout_marginTop="5dp" />
+        android:layout_marginTop="20dp" />
 
 </RelativeLayout>
