--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,36 +3,66 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:fancy="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@drawable/fondo3azuljpg"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.cdi.practica.jefaturapoliciausuario.MainActivity">
 
-    <EditText
-        android:id="@+id/email"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
-        android:layout_centerHorizontal="true"
-        android:layout_above="@+id/password"
-        android:layout_marginBottom="30dp"
-        android:textColor="@color/colorTextIcons"
-        android:hint="Email"/>
-
-    <EditText
-        android:id="@+id/password"
-        android:layout_width="199dp"
+    <TextView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:inputType="textPassword"
-        android:textColor="@color/colorTextIcons"
-        android:ems="10"
-        android:hint="Contraseña" />
+        android:text="Iniciar sesión"
+        android:layout_centerHorizontal="true"
+        android:layout_above="@+id/email_box"
+        android:layout_marginBottom="40dp"
+        android:textSize="30dp"/>
+
+    <com.github.florent37.materialtextfield.MaterialTextField
+        android:id="@+id/email_box"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_above="@+id/password_box"
+        app:mtf_labelColor="#666"
+        app:mtf_image="@drawable/ic_action_email">
+
+        <EditText
+            android:id="@+id/email"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Email"
+            android:inputType="textEmailAddress"
+            android:textColor="@color/black"
+            android:textSize="15sp" />
+
+    </com.github.florent37.materialtextfield.MaterialTextField>
+
+    <com.github.florent37.materialtextfield.MaterialTextField
+        android:id="@+id/password_box"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        app:mtf_labelColor="#666"
+        app:mtf_image="@drawable/ic_action_key">
+
+        <EditText
+            android:id="@+id/password"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Contraseña"
+            android:inputType="textPassword"
+            android:textColor="@color/black"
+            android:textSize="15sp" />
+
+    </com.github.florent37.materialtextfield.MaterialTextField>
+
+
 
 
     <mehdi.sakout.fancybuttons.FancyButton
         android:id="@+id/botonLogin"
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"
+        android:layout_width="180dp"
+        android:layout_height="50dp"
         android:paddingBottom="10dp"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
@@ -46,6 +76,7 @@
         fancy:fb_focusColor="#9bd823"
         fancy:fb_radius="30dp"
         fancy:fb_text="ACEPTAR"
+        fancy:fb_textSize="18dp"
         fancy:fb_textColor="#FFFFFF" />
 
     <TextView
@@ -55,8 +86,8 @@
         android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="20dp"
-        android:textColor="@color/white"
+        android:textColor="@color/colorPrimaryText"
         android:text="Registrarse"
-        android:textSize="15dp"/>
+        android:textSize="17dp"/>
 
 </RelativeLayout>
