--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -10,12 +10,13 @@
 
     <mehdi.sakout.fancybuttons.FancyButton
         android:id="@+id/predenuncia"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
         android:paddingBottom="10dp"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
         android:paddingTop="10dp"
+        android:layout_marginRight="50dp"
         android:layout_centerHorizontal="true"
         android:layout_above="@+id/gestion"
         android:layout_marginBottom="75dp"
@@ -25,16 +26,28 @@
         fancy:fb_focusColor="@color/colorPrimary"
         fancy:fb_radius="30dp"
         fancy:fb_text="PREDENUNCIA"
-        fancy:fb_textColor="#FFFFFF"/>
+        fancy:fb_textColor="#FFFFFF"
+        fancy:fb_textSize="20sp"/>
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@id/predenuncia"
+        android:layout_alignBottom="@id/predenuncia"
+        android:layout_alignLeft="@id/predenuncia"
+        android:layout_marginLeft="40dp"
+        android:src="@drawable/ic_action_pre"
+        android:clickable="false"/>
 
     <mehdi.sakout.fancybuttons.FancyButton
         android:id="@+id/gestion"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
         android:paddingBottom="10dp"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
         android:paddingTop="10dp"
+        android:layout_marginRight="50dp"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         fancy:fb_borderColor="#FFFFFF"
@@ -43,16 +56,28 @@
         fancy:fb_focusColor="@color/colorPrimary"
         fancy:fb_radius="30dp"
         fancy:fb_text="GESTIÓN"
-        fancy:fb_textColor="#FFFFFF" />
+        fancy:fb_textColor="#FFFFFF"
+        fancy:fb_textSize="20sp"/>
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@id/gestion"
+        android:layout_alignBottom="@id/gestion"
+        android:layout_alignLeft="@id/gestion"
+        android:layout_marginLeft="40dp"
+        android:src="@drawable/ic_action_ges"
+        android:clickable="false"/>
 
     <mehdi.sakout.fancybuttons.FancyButton
         android:id="@+id/emergencia"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
         android:paddingBottom="10dp"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
         android:paddingTop="10dp"
+        android:layout_marginRight="50dp"
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/gestion"
         android:layout_marginTop="75dp"
@@ -62,7 +87,18 @@
         fancy:fb_focusColor="@color/colorPrimary"
         fancy:fb_radius="30dp"
         fancy:fb_text="EMERGENCIA"
-        fancy:fb_textColor="#FFFFFF" />
+        fancy:fb_textColor="#FFFFFF"
+        fancy:fb_textSize="20sp"/>
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@id/emergencia"
+        android:layout_alignBottom="@id/emergencia"
+        android:layout_alignLeft="@id/emergencia"
+        android:layout_marginLeft="40dp"
+        android:src="@drawable/ic_action_sos"
+        android:clickable="false"/>
 
 
 
