--- a/app/src/main/res/layout/activity_add_document.xml
+++ b/app/src/main/res/layout/activity_add_document.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:id="@+id/rl3"
-    tools:context=".addDocument">
+    tools:context=".AddDocument">
 
 
 
